--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ cffi==1.14.3
 chardet==3.0.4
 click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 cryptography==3.2.1
-ecdsa==0.16.1; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2'
+ecdsa==0.16.1; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 flask==1.1.1
 idna==2.8
 itsdangerous==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -23,6 +23,6 @@ pyjwt==1.7.1
 python-jose[cryptography]==3.1.0
 requests==2.22.0
 rsa==4.6; python_version >= '3.5' and python_version < '4'
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 urllib3==1.25.11; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 werkzeug==0.16.0
